<resources>
    <string name="app_name">Imc</string>
    <string name="valor_invalido">Valor invalido</string>
    <string name="obesidad_extrema">Obesidad extrema</string>
    <string name="obesidad">Obesidad</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="peso_normal">Peso normal</string>
    <string name="peso_bajo">Peso bajo</string>
    <string name="clasificacion_indefinida">Clasificacion indefinida</string>
    <string name="texto_etiqueta_estatura">Proporcione la estatura en metros</string>
    <string name="texto_etiqueta_peso">Proporcione el peso en kilogramos</string>
    <string name="texto_boton_calcular">Calcular</string>
    <string name="texto_boton_limpiar">Limpiar</string>
    <string name="texto_etiqueta_resultado">El indice de masa corporal es</string>
</resources>
